# backend

./: .gitignore  .gitlab-ci.yml  Dockerfile  LICENSE  Pipfile  README.md  example.env  main.py  pyproject.toml
src/watsh/connector/: access_control.py  branches.py  commits.py  environments.py  items.py  json_value.py  members.py  projects.py  schema.py  setup.py  users.py  validation.py  workflows.py
src/watsh/connector/crud/: branches.py  collections.py  commits.py  environments.py  items.py  members.py  projects.py  users.py
src/watsh/lib/: crypto.py  exceptions.py  models.py  pyobjectid.py  smtp_client.py  stripe_client.py  time.py  token.py
src/watsh/svc/backend/: app.py  authentication.py  client.py  config.py  handlers.py  server_setup.py  smtp.py
src/watsh/svc/backend/mailing/: invite_user.py  login_token.py  ownership_transfer.py  update_email_address.py  validate_email_address.py
src/watsh/svc/backend/mailing/html/: invite_email.html  login_email.html  new_email.html  (+2 more)
src/watsh/svc/backend/routers/: auth.py  branch.py  commit.py  environment.py  health.py  item.py  items.py  json_value.py  me.py  member.py  ownership.py  project.py  schema.py  token.py  webhook.py  ws.py
tests/: encryption.py  test_api.py  test_conn_environment.py  test_conn_file_1.py  test_conn_file_2.py  test_conn_key_1.py  test_conn_key_2.py  test_conn_schema_1.py  test_conn_schema_3.py  test_conn_user_2.py  test_conn_vault.py  test_key.py  test_main_branch_items.py  test_share_project.py  test_user_created.py  test_ws_client_1.py  test_ws_client_2.py  test_ws_client_3.py
