[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "watsh.svc.backend"
version = "0.2.0"
authors = [
  { name="Joseph Comisi", email="joseph@watsh.io" },
]
maintainers = [
  { name="Joseph Comisi", email="joseph@watsh.io" },
]
description = "Back-end API"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
]
dependencies = [
  "fastapi[all]==0.101.1",
  "motor==3.3.1",
  "python-dotenv==1.0.0",
  "sentry-sdk==1.32.0",
  "pyjwt[crypto]==2.8.0",
  "json-schema-for-humans==0.47",
  "jsonschema==4.19.1",
  "genson==1.2.2",
  "aiosmtplib==3.0.1",
  "readme-metrics==3.1.0",
  "pycryptodomex==3.20.0",
]

[project.urls]
"Homepage" = "https://gitlab.com/watsh/svc/backend"
"Bug Tracker" = "https://gitlab.com/watsh/svc/backend/issues"